force-app/main/default/objects/TarifProduit__c/TarifProduit__c.object-meta.xml
<CustomObject>
    <description>Cet objet est créé pour gérer la table des tarifs par dimension et nombre de vantaux des produits pour CPQ.</description>
    <label>Tarif produit</label>
    <nameField>
        <displayFormat>TP/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tarifs produits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>