force-app/main/default/objects/TarifProduit__c/fields/Actif__c.field-meta.xml
<CustomField>
    <fullName>Actif__c</fullName>
    <formula>AND(DateDebutValidite__c &lt;= TODAY(),
OR(ISNULL(DateFinValidite__c), TODAY() &lt;= DateFinValidite__c)
)</formula>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>