force-app/main/default/objects/TarifProduit__c/fields/CodeProduit__c.field-meta.xml
<CustomField>
    <fullName>CodeProduit__c</fullName>
    <description>Code produit du produit relié. Est utilisé pour retrouver le bon prix dans CPQ.</description>
    <formula>IF(
				NOT(ISBLANK(Produit__c)),
				Produit__r.ProductCode,
				IF(
								NOT(ISBLANK( productOption__c)),
 productOption__r.SBQQ__ProductCode__c,
								&quot;&quot;)
				)</formula>
    <label>Code produit</label>
    <type>Text</type>
</CustomField>