force-app/main/default/objects/TarifProduit__c/fields/codeProduitParent__c.field-meta.xml
<CustomField>
    <fullName>codeProduitParent__c</fullName>
    <formula>IF(
				NOT(ISBLANK( productOption__c)),
 productOption__r.SBQQ__ConfiguredSKU__r.ProductCode,
				&quot;&quot;
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code produit parent</label>
    <type>Text</type>
</CustomField>