force-app/main/default/objects/TarifProduit__c/fields/coeffVente__c.field-meta.xml
<CustomField>
    <fullName>coeffVente__c</fullName>
    <label>Coefficient de vente</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>