force-app/main/default/objects/TarifProduit__c/fields/DateFinValidite__c.field-meta.xml
<CustomField>
    <fullName>DateFinValidite__c</fullName>
    <description>Ce champ est utilisé pour connaître la période de validité dun tarif. Il a un impact sur le champ &quot;Actif__c&quot;. Seuls les records de tarif actifs sont utilisés par les quotes CPQ.</description>
    <label>Date de fin de validité</label>
    <required>true</required>
    <type>Date</type>
</CustomField>