force-app/main/default/objects/TarifProduit__c/fields/DimensionHL__c.field-meta.xml
<CustomField>
    <fullName>DimensionHL__c</fullName>
    <description>Demi-périmètre = hauteur + largeur</description>
    <label>Dimension HLMIN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>