force-app/main/default/objects/TarifProduit__c/fields/DimensionHLMAX__c.field-meta.xml
<CustomField>
    <fullName>DimensionHLMAX__c</fullName>
    <label>Dimension HLMAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>