force-app/main/default/objects/TarifProduit__c/fields/maxDistance__c.field-meta.xml
<CustomField>
    <fullName>maxDistance__c</fullName>
    <label>Distance max (Km)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>