force-app/main/default/objects/TarifProduit__c/fields/methodePrixParent__c.field-meta.xml
<CustomField>
    <fullName>methodePrixParent__c</fullName>
    <formula>IF(
NOT(ISBLANK( productOption__c)),
TEXT(productOption__r.SBQQ__ConfiguredSKU__r.MethodePrixOption__c), 
&quot;&quot;
)</formula>
    <label>Méthode prix parent</label>
    <type>Text</type>
</CustomField>