force-app/main/default/objects/TarifProduit__c/fields/minDistance__c.field-meta.xml
<CustomField>
    <fullName>minDistance__c</fullName>
    <label>Distance min (Km)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>