force-app/main/default/objects/TarifProduit__c/fields/NombreVantaux__c.field-meta.xml
<CustomField>
    <fullName>NombreVantaux__c</fullName>
    <description>Utilisé pour indiquer le nombre de vantaux pour lequel ce prix s&apos;applique.</description>
    <label>Nombre de vantaux</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NbVantaux</valueSetName>
    </valueSet>
</CustomField>