force-app/main/default/objects/TarifProduit__c/fields/PrixUnitaireHT__c.field-meta.xml
<CustomField>
    <fullName>PrixUnitaireHT__c</fullName>
    <description>Prix pour le produit, la dimension et le nombre de vantaux indiqués.</description>
    <label>Prix unitaire HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>