force-app/main/default/objects/TarifProduit__c/fields/productOption__c.field-meta.xml
<CustomField>
    <fullName>productOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <referenceTo>SBQQ__ProductOption__c</referenceTo>
    <relationshipLabel>Tarifs produits</relationshipLabel>
    <relationshipName>Tarifs_Produits</relationshipName>
    <type>Lookup</type>
</CustomField>