force-app/main/default/objects/TarifProduit__c/fields/Produit__c.field-meta.xml
<CustomField>
    <fullName>Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Produit auquel s&apos;applique le tarif en question.</description>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Tarifs</relationshipName>
    <type>Lookup</type>
</CustomField>