force-app/main/default/objects/TarifProduit__c/fields/uniqueKey__c.field-meta.xml
<CustomField>
    <fullName>uniqueKey__c</fullName>
    <description>Champ technique pour éviter des doublons en créant une clé unique 
&quot;Produit+ProductOption+DateDebut+DateFin+NombreVantaux+DimensionHL+DimensionHLMAX&quot;</description>
    <externalId>true</externalId>
    <label>[#] Clé unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>