force-app/main/default/objects/TarifProduit__c/fields/valeurPercent__c.field-meta.xml
<CustomField>
    <fullName>valeurPercent__c</fullName>
    <label>Valeur %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>