force-app/main/default/objects/TarifProduit__c/validationRules/VR_K3_TarifProduit_DistanceMinUnderMax.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_TarifProduit_DistanceMinUnderMax</fullName>
    <active>true</active>
    <description>La valeur max supérieure ou égale à la valeur min</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
maxDistance__c &lt; minDistance__c</errorConditionFormula>
    <errorDisplayField>maxDistance__c</errorDisplayField>
    <errorMessage>La distance max doit être supérieure ou égale à la distance min</errorMessage>
</ValidationRule>