force-app/main/default/objects/TarifProduit__c/validationRules/VR_K3_TarifProduit_DistanceOver0.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_TarifProduit_DistanceOver0</fullName>
    <active>true</active>
    <description>Les valeurs saisies doivent êtres supérieures ou égales à 0</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
(maxDistance__c &lt; 0 ||
minDistance__c &lt; 0)</errorConditionFormula>
    <errorMessage>Les distances en kilomètres doivent être supérieures ou égales à zéro</errorMessage>
</ValidationRule>